--- a/src/app/components/fotos/fotos.component.html
+++ b/src/app/components/fotos/fotos.component.html
@@ -1,1 +1,8 @@
-<p>fotos works!</p>
+<div class="card-columns">
+    <div class="card" *ngFor="let item of items | async">
+        <img [src]="item.url">
+        <div class="card-body">
+            <h5 class="card-title">{{ item.name }}</h5>
+        </div>
+    </div>
+</div>
